# nvidia-texture-tools

./: .gitignore  .travis.yml  ApiDesignIssues.md  ApiDocumentation.md  CMakeLists.txt  ChangeLog  CommandLineTools.md  CompilationInstructions.md  CompressionDifferences.md  D3D11TextureFormats.md  DdsFileFormat.md  FAQ.md  HighQualityDXTCompression.md  LICENSE  LanguageBindings.md  MipmapGeneration.md  NVIDIA_Texture_Tools_LICENSE.txt  NVIDIA_Texture_Tools_README.txt  NVIDIA_Texture_Tools_TODO.txt  NewFeatures.md  NormalMapCompression.md  ProjectHome.md  ProjectsUsingNVTT.md  PureGreysDXTCompression.md  README.md  RealTimeDXTCompression.md  ResizeFilters.md  Roadmap.md  SingleColorDXTCompression.md  TestsuiteResults.md  ThirdPartyLegalNotices.md  buildpkg  configure
src/: CMakeLists.txt  nvconfig.h.in
src/bc6h/: CMakeLists.txt
src/bc7/: CMakeLists.txt  avpcl_mode0.cpp
src/nvcore/: Algorithms.h  Array.h  Array.inl  CMakeLists.txt  Containers.h  CpuInfo.cpp  CpuInfo.h  Debug.cpp  Debug.h  DefsGnucDarwin.h  DefsGnucLinux.h  DefsGnucWin32.h  DefsVcWin32.h  FileSystem.cpp  FileSystem.h  ForEach.h  HashMap.h  Library.cpp  Library.h  Memory.cpp  Memory.h  Prefetch.h  Ptr.h  RefCounted.h  StdStream.h  StrLib.cpp  StrLib.h  Stream.h  TextReader.cpp  TextWriter.cpp  TextWriter.h  Timer.h  Tokenizer.cpp  Utils.h  nvcore.h
src/nvcore/poshlib/: posh.c
src/nvimage/: BlockDXT.cpp  BlockDXT.h  CMakeLists.txt  ColorBlock.cpp  ColorBlock.h  ColorSpace.cpp  DirectDrawSurface.cpp  DirectDrawSurface.h  ErrorMetric.cpp  ErrorMetric.h  Filter.cpp  Filter.h  FloatImage.cpp  FloatImage.h  HoleFilling.cpp  HoleFilling.h  Image.cpp  Image.h  ImageIO.cpp  ImageIO.h  KtxFile.cpp  KtxFile.h  NormalMap.cpp  NormalMap.h  PixelFormat.h  Quantize.cpp  Quantize.h  TgaFile.h  TiledImage.h  nvimage.h
src/nvimage/nvtt/: CMakeLists.txt  CompressDXT.cpp  CompressDXT.h  CompressRGB.cpp  CompressRGB.h  CompressionOptions.cpp  CompressionOptions.h  FastCompressDXT.cpp  FastCompressDXT.h  InputOptions.cpp  InputOptions.h  OutputOptions.cpp  QuickCompressDXT.cpp  cmdline.h  compress.cpp  dxtlib.cpp  nvtt.h
src/nvmath/: Basis.cpp  Basis.h  Box.cpp  Box.h  Box.inl  CMakeLists.txt  Color.h  Color.inl  Fitting.cpp  Fitting.h  Half.cpp  Half.h  Matrix.cpp  Matrix.h  Matrix.inl  PackedFloat.cpp  PackedFloat.h  Plane.cpp  Plane.h  Plane.inl  Random.h  SimdVector.h  SimdVector_SSE.h  SimdVector_VE.h  Sparse.cpp  SphericalHarmonic.cpp  SphericalHarmonic.h  Triangle.cpp  TypeSerialization.cpp  Vector.h  Vector.inl  ftoi.h  nvmath.h
src/nvthread/: Atomic.h  CMakeLists.txt  Event.cpp  Mutex.cpp  Mutex.h  ParallelFor.cpp  ParallelFor.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  nvthread.cpp  nvthread.h
src/nvtt/: BlockCompressor.cpp  BlockCompressor.h  CMakeLists.txt  ClusterFit.cpp  ClusterFit.h  CompressDXT.cpp  CompressDXT.h  CompressRGB.cpp  CompressionOptions.cpp  CompressionOptions.h  Compressor.cpp  Compressor.h  CompressorDX10.cpp  CompressorDX10.h  CompressorDX11.cpp  CompressorDX11.h  CompressorDX9.cpp  CompressorDX9.h  CompressorDXT.cpp  CompressorDXT.h  CompressorDXT1.cpp  CompressorDXT1.h  CompressorDXT5_RGBM.cpp  CompressorDXT5_RGBM.h  CompressorETC.cpp  CompressorRGB.cpp  CompressorRGB.h  CompressorRGBE.cpp  CompressorRGBE.h  Context.cpp  Context.h  CubeImage.cpp  CubeImage.h  CubeSurface.cpp  CubeSurface.h  FastCompressDXT.cpp  InputOptions.cpp  InputOptions.h  OptimalCompressDXT.cpp  OptimalCompressDXT.h  (+19 more)
src/nvtt/bc6h/: CMakeLists.txt  bits.h  exr.cpp  tile.h  utils.cpp  utils.h  zoh.cpp  zoh.h  zoh.sln  zoh.vcproj  zoh_utils.cpp  zohc.cpp  zohone.cpp  zohtwo.cpp
src/nvtt/bc7/: CMakeLists.txt  avpcl.cpp  avpcl.h  avpcl_mode0.cpp  avpcl_mode1.cpp  avpcl_mode2.cpp  avpcl_mode3.cpp  avpcl_mode4.cpp  avpcl_mode5.cpp  avpcl_mode6.cpp  avpcl_mode7.cpp  bits.h  shapes_three.h  shapes_two.h  targa.cpp  tile.h  utils.cpp  utils.h
src/nvtt/cuda/: Bitmaps.h  CompressKernel.cu  CudaCompressDXT.cpp  CudaCompressDXT.h  CudaCompressorDXT.cpp  CudaCompressorDXT.h  CudaMath.h  CudaUtils.cpp  CudaUtils.h
src/nvtt/experimental/: nvtt_experimental.h
src/nvtt/squish/: CMakeLists.txt  alpha.cpp  alpha.h  clusterfit.cpp  clusterfit.h  colourblock.cpp  colourblock.h  colourfit.h  colourset.cpp  fastclusterfit.cpp  fastclusterfit.h  maths.cpp  maths.h  rangefit.cpp  rangefit.h  simd.h  simd_ve.h  singlechannelfit.cpp  singlechannelfit.h  singlecolourfit.cpp  singlecolourfit.h  squish.cpp  weightedclusterfit.cpp  weightedclusterfit.h
src/nvtt/tests/: CMakeLists.txt  bc1enc.cpp  cubemaptest.cpp  imperativeapi.cpp  process_alpha_map.cpp  stress.cpp  testsuite.cpp
src/nvtt/tools/: CMakeLists.txt  assemble.cpp  cmdline.h  compress.cpp  configdialog.cpp  configdialog.ui  decompress.cpp  imgdiff.cpp  resize.cpp  thumbnailer.cpp
trunk/: CMakeLists.txt  ChangeLog  LICENSE.txt  NVIDIA_Texture_Tools_README.txt  NVIDIA_Texture_Tools_TODO.txt  configure
trunk/cmake/: DetermineProcessor.cmake  FindCUDA.cmake  FindFreeImage.cmake  OptimalOptions.cmake  make2cmake.cmake  parse_cubin.cmake
trunk/gnuwin32/lib/: libtiff-bcc.lib
trunk/project/vc10/: nvtt.sln
trunk/project/vc12/: bc6-01-eigen-solver.vsp  nvtt.sln
trunk/project/vc8/: .ignore  nvconfig.h  nvtt.sln  nvtt.vsprops
trunk/project/vc9/: nvconfig.h  nvtt.sln  nvtt.vsprops
trunk/src/: CMakeLists.txt
trunk/src/bc6h/: zohone.cpp  zohtwo.cpp
trunk/src/nvcore/: Algorithms.h  Array.h  Array.inl  CMakeLists.txt  Containers.h  CpuInfo.h  Debug.cpp  Debug.h  DefsGnucDarwin.h  DefsGnucLinux.h  DefsGnucWin32.h  DefsVcWin32.h  FileSystem.cpp  FileSystem.h  ForEach.h  Hash.h  HashMap.h  Library.cpp  Library.h  Memory.cpp  Memory.h  Ptr.h  RefCounted.h  StdStream.h  StrLib.cpp  StrLib.h  Stream.h  TextReader.cpp  TextReader.h  TextWriter.cpp  TextWriter.h  Timer.h  Tokenizer.cpp  Tokenizer.h  Utils.h  nvcore.h
trunk/src/nvimage/: BlockDXT.cpp  BlockDXT.h  CMakeLists.txt  ColorBlock.cpp  ColorBlock.h  ColorSpace.cpp  ColorSpace.h  ConeMap.cpp  ConeMap.h  DirectDrawSurface.cpp  DirectDrawSurface.h  ErrorMetric.cpp  Filter.cpp  Filter.h  FloatImage.cpp  Image.cpp  (+14 more)
(+662 files in other folders)
